css/style.css
/* ... */
.contact-section h6 a.contact-w-arrow::after {
    content: "";
    position: absolute;
    width: 10%;
    height: 100%;
    top: 0;
    left: 100%;
}

.empty-contact {
    margin-top: 50px;
}

.contact-section h6 a.contact-w-arrow i {
    display: block;
    position: absolute;
    font-size: var(--font40);
    top: 58%;
    left: 110%;
    transform: translateY(-50%);
    transform-origin: center;
    transition-duration: .5s;
}

.contact-section h6 a.contact-w-arrow:hover i {
    transform: translateY(-50%) rotate(-45deg);
}

.footer-section .footer-col {
    padding: 0 25px;
}

.footer-section .copyright-area p {
    color: #787878;
    font-size: var(--font16);
    line-height: 26px;
    padding: 25px 110px 50px 110px;
}

